Fixing the problems which are created mistakely while writing the code such as z-index , height = vw instead vh problems

--- a/form/style.css
+++ b/form/style.css
@@ -11,7 +11,7 @@ body {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   object-fit: cover;
   z-index: -1;
 }
@@ -21,7 +21,7 @@ main {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
-  z-index: -1;
+  z-index: 1;
 }
 
 form {
